--- a/perf/cluster/charts/connect/templates/service.yaml
+++ b/perf/cluster/charts/connect/templates/service.yaml
@@ -8,9 +8,11 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  type: LoadBalancer
   ports:
     - name: kafka-connect
       port: {{ .Values.servicePort }}
+      targetPort: 8083
     {{- if .Values.prometheus.jmx.enabled }}
     - name: metrics
       port: {{ .Values.prometheus.jmx.port }}
