--- a/perf/cluster/charts/kafka/requirements.yaml
+++ b/perf/cluster/charts/kafka/requirements.yaml
@@ -1,25 +1,25 @@
 dependencies:
 - name: cp-kafka
   version: 0.1.0
-  repository: file://./kafka-charts/cp-kafka
+  repository: file://./charts/cp-kafka
   condition: cp-kafka.enabled
 - name: cp-zookeeper
   version: 0.1.0
-  repository: file://./kafka-charts/cp-zookeeper
+  repository: file://./charts/cp-zookeeper
   condition: cp-zookeeper.enabled
 - name: cp-schema-registry
   version: 0.1.0
-  repository: file://./kafka-charts/cp-schema-registry
+  repository: file://./charts/cp-schema-registry
   condition: cp-schema-registry.enabled
 - name: cp-kafka-rest
   version: 0.1.0
-  repository: file://./kafka-charts/cp-kafka-rest
+  repository: file://./charts/cp-kafka-rest
   condition: cp-kafka-rest.enabled
 - name: cp-ksql-server
   version: 0.1.0
-  repository: file://./kafka-charts/cp-ksql-server
+  repository: file://./charts/cp-ksql-server
   condition: cp-ksql-server.enabled
 - name: cp-control-center
   version: 0.1.0
-  repository: file://./kafka-charts/cp-control-center
+  repository: file://./charts/cp-control-center
   condition: cp-control-center.enabled
