--- a/perf/cluster/manifests/kafka-client.yaml
+++ b/perf/cluster/manifests/kafka-client.yaml
@@ -1,12 +1,21 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: kafka-client
+  name: kafka-perf-client
 spec:
   containers:
-  - name: kafka-client
-    image: confluentinc/cp-kafka:6.0.1
-    command:
-      - sh
-      - -c
-      - "exec tail -f /dev/null"
+  - name: kafka-perf-client
+    image: mssivamu/kafka-perf-cosmosdb:latest
+    args:
+      - --topic
+      - connect-test
+      - --num-records
+      - '1000'
+      - --payload-file
+      - /etc/payload/small.txt
+      - --throughput 
+      - '10'
+      - --producer-props
+      - bootstrap.servers=kafka-cp-kafka-headless:9092
+      - buffer.memory=67108864
+      - batch.size=8196
