Using helm configs, upstream kafka helm chart, readme cleanup

--- a/perf/cluster/charts/connect/values.yaml
+++ b/perf/cluster/charts/connect/values.yaml
@@ -41,25 +41,25 @@ configurationOverrides:
   "offset.storage.topic": "cosmos-connect-offsets"
 
 ## Kafka Connect JVM Heap Option
-heapOptions: "-Xms512M -Xmx2g"
+heapOptions: "-Xms512M -Xmx512M"
 
 ## Additional env variables
-## CUSTOM_SCRIPT_PATH is the path of the custom shell script to be ran mounted in a volume
 customEnv: 
-  # CUSTOM_SCRIPT_PATH: /etc/scripts/create-connectors.sh
   CLASSPATH: /usr/share/java/monitoring-interceptors/monitoring-interceptors-6.0.0.jar
   CONNECT_PRODUCER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringProducerInterceptor"
   CONNECT_CONSUMER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor"
 
-resources:
-  # Limits based on the Connect Performance Verification Guide defined in Page 19:
-  # https://assets.confluent.io/m/28c7ffcc359a13c0/original/20200325-VIP_Connect-Verification_Guide.pdf
-  limits:
-    cpu: 2666m
-    memory: 2Gi
-  requests:
-    cpu: 2666m
-    memory: 2Gi
+resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #  cpu: 100m
+  #  memory: 128Mi
+  # requests:
+  #  cpu: 100m
+  #  memory: 128Mi
 
 ## Custom pod annotations
 podAnnotations: {}
@@ -84,7 +84,7 @@ prometheus:
   ## JMX Exporter Configuration
   ## ref: https://github.com/prometheus/jmx_exporter
   jmx:
-    enabled: false
+    enabled: true
     image: solsson/kafka-prometheus-jmx-exporter@sha256
     imageTag: 6f82e2b0464f50da8104acd7363fb9b995001ddff77d248379f8788e78946143
     imagePullPolicy: IfNotPresent
@@ -97,12 +97,12 @@ prometheus:
 ## You can list load balanced service endpoint, or list of all brokers (which is hard in K8s).  e.g.:
 ## bootstrapServers: "PLAINTEXT://dozing-prawn-kafka-headless:9092"
 kafka:
-  bootstrapServers: "PLAINTEXT://kafka-cp-kafka-headless:9092"
+  bootstrapServers: ""
 
 ## If the Kafka Chart is disabled a URL and port are required to connect
 ## e.g. gnoble-panther-cp-schema-registry:8081
 cp-schema-registry:
-  url: "kafka-cp-schema-registry:8081"
+  url: ""
 
 ## List of volumeMounts for connect server container
 ## ref: https://kubernetes.io/docs/concepts/storage/volumes/
